psudo-code and some html content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
-	
+	<nav>
+		<img src="" alt="">
+		<ul>
+			<li>About</li>
+		</ul>		
+	</nav>
+
+	<div class="hero">
+		<div class="your-clock">
+			
+		</div>
+		<form action="" class="whatToEat">
+			
+		</form>
+	</div>
 	
 </body>
