solving the confict

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			
 		</div>
 		<form action="" class="whatToEat">
-			
+			<ul>
+				<li><input type="checkbox" value="" ></li>
+				<li><input type="checkbox" value="" ></li>
+				<li><input type="checkbox" value="" ></li>
+				<li><input type="checkbox" value="" ></li>
+				<li><input type="checkbox" value="" ></li>
+			</ul>
 		</form>
 	</div>
 	
