add form in html

--- a/index.html
+++ b/index.html
@@ -18,18 +18,33 @@
 	</nav>
 
 	<div class="hero">
+		<h1>Get food.</h1>
 		<div class="your-clock">
-			
+			<p>My clock goes here.</p>
 		</div>
 		<form action="" class="whatToEat">
-			<ul>
-				<li><input type="checkbox" value="" ></li>
-				<li><input type="checkbox" value="" ></li>
-				<li><input type="checkbox" value="" ></li>
-				<li><input type="checkbox" value="" ></li>
-				<li><input type="checkbox" value="" ></li>
+			<ul class='Allergies'>
+				<li><input type="checkbox" value="" checked>Any allergies?</li>
+				<li><input type="checkbox" value="Gluten" >Gluten</li>
+				<li><input type="checkbox" value="Egg" >Egg</li>
+				<li><input type="checkbox" value="Peanuts" >Peanuts</li>
+				<li><input type="checkbox" value="Dairy" >Dairy</li>
+				<li><input type="checkbox" value="Seafood" >Seafood</li>
 			</ul>
+			<ul class="diet">
+				<li><input type="checkbox" value="" checked>Diet?</li>
+				<li><input type="checkbox" value="Lacto vegetarian"></li>
+				<li><input type="checkbox" value="Ovo vegetarian"></li>
+				<li><input type="checkbox" value="Pescetarian"></li>
+				<li><input type="checkbox" value="Vegan"></li>
+				<li><input type="checkbox" value="Vegetarian"></li>
+			</ul>
+			<input type="submit" value="Feed Me!">
 		</form>
 	</div>
+
+	<main class="recipes">
+		
+	</main>
 	
 </body>
