some template stuff

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name ="keywords" content= "">
+	<meta name ="keywords" content= "recipies, food, hungry, yummly API, time, cook, snack, main course, mid-night snack, dinner, lunch, Laura Culham, Coral Xinting He, Luke Diamantopoulos, API">
 	<meta name="description" content= "">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Abril+Fatface' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type ="text/css" href="styles/main.css">
-	<title></title>
+	<title>Munch Time!</title>
+	<script id="recipeTemplate" type='x-handlebars-template'>
+		<div>
+		<h2>{{name}}</h2>
+		<li>
+		{{discription}}
+		</li>
+		</div>
+	</script>
 </head>
 
 <body>
@@ -47,4 +55,19 @@
 		
 	</main>
 	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+	<script src='apps/script.js'></script>
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
