some minor changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans|Abril+Fatface' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" type ="text/css" href="styles/main.css">
+	<link rel="stylesheet" type ="text/css" href="styles/style.css">
 	<title>Munch Time!</title>
 	<script id="recipeTemplate" type='x-handlebars-template'>
 		<div>
@@ -14,6 +14,7 @@
 		<li>
 		{{discription}}
 		</li>
+
 		</div>
 	</script>
 
