--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 	</div>
 
 	<main class="recipes">
+	<button class="more">Show me more</button>
 		
 	</main>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="apps/script.js"></script>
+
 	
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
