--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 	<script id="recipeTemplate" type='x-handlebars-template'>
 		<div>
 		<h2>{{name}}</h2>
-		<div class="image">{{image}}</div>
-		{{cookTime}}
-		<li>
-		{{#each ingridients}}
-		</li>
-		<a href="{{recipeUrl}}"> Click here to see the full recipe!</a>
+		<div class="image"><img src="{{image}}"></div>
+		{{time}}
+
+		<ul>
+		{{#each ingredient}}
+		<li>{{this}}</li>
+		{{/each}}
+		</ul>
+    	<a href="{{source}}"> Click here to see the full recipe!</a>
 		</div>
 	</script>
 
@@ -68,14 +71,13 @@
 		</form>
 	</div>
 
-	<main class="recipes">
-	<button class="more">Show me more</button>
-		
+	<main id="content">
+		<section id='recipes'></section>
+	<button class="more">Show me more</button>	
 	</main>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="apps/script.js"></script>
-	
+
 	<script src = "https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	<script src='apps/script.js'></script>
 	<script src="styles/flipclock.js"></script>	
