--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="details">
 					<ul class='click'>
-						<p> Ingredients </p>
+						<h2> Ingredients </h2>
 						{{#each ingredient}}
 						<li>{{this}}</li>
 						{{/each}}
