--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						{{/each}}
 					</ul>
 			    	<a href="{{source}}" target="_blank">Click here to see the full recipe!</a>
-		    </div>
+		    	</div>
 		   </div>
 		</div>
 	</script>
@@ -143,12 +143,17 @@
 	</div>
 
 	<main id="content">
-		<div class='wrapper'>
-			<section id="recipes">
-				
-			</section>		
+		<div>
+			<div class='wrapper'>
+				<section id="recipes">
+					
+				</section>		
+			</div>
+			
+			<div class="buttonmore">
+				<button class="more">Show me more</button>
+			</div>
 		</div>
-		<button class="more">Show me more</button>	
 		
 		
 	</main>
