Twitter and random ish

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 	<!-- --------------- About full page Menu ---->
 	<nav>
 		<img src="asset/logo.png" alt="">
-				
+		<div class="header-container">	
+			<a href="https://twitter.com/share" class="twitter-share-button" data-text="Hungry?" data-size="small">Tweet</a>
 			<button id="button" >About</button>
+		</div>
 	</nav>
 	<!-- </div> -->
 	
