--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- Clock Java and CSS  -->
 	<link rel="stylesheet" href="styles/flipclock.css">
-	
+	<link rel="icon" href="asset/fav.png" type="image/png">
 	<!-- Clock Java and CSS  -->
 
 	<title>Munch Time!</title>
